prevent chat from going off screen

--- a/src/components/BattleChessGame/BattleChessManager/BattleChessManager.css
+++ b/src/components/BattleChessGame/BattleChessManager/BattleChessManager.css
@@ -92,7 +92,7 @@
   }
 
   .inGameChat {
-    height: 100%;
+    max-height: 280px;
     box-sizing: border-box;
   }
 }
